form nearly done

--- a/apps/card/src/styles/theme-custom/_variables.scss
+++ b/apps/card/src/styles/theme-custom/_variables.scss
@@ -27,4 +27,13 @@
   --border: 232 232 232;
   --ring: 244 244 244;
   --input: 191 191 191;
+
+  --font-sans: 'Space Grotesk';
+
+  --border-default: hsl(270, 3%, 87%);
+  --border-initial: hsl(249, 99%, 64%);
+  --border-end: hsl(278, 94%, 30%);
+
+  --dark-violet: hsl(278, 68%, 11%);
+  --error: hsl(0, 100%, 66%);
 }
